--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
+*.toc
+*.pyz
+*.exe
+*.pyd
+*.dll
 *.cpg
 *.shp
 *.prj
 *.shx
 *.dbf
+*.bzl
+*.rc
 *.gpkg
+*.html
+build/user_interface/PKG-00.toc
+.gitignore
+dist/user_interface/_internal/_bz2.pyd
+compile_candidate/mesa/src/main.rs
