--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@
 *.gpkg
 *.spec
 *.html
+*.shp
+*.shx
+*.sbn
+*.sbx
+*.xml
 build/user_interface/PKG-00.toc
 .gitignore
 dist/user_interface/_internal/_bz2.pyd
