--- a/code/config.ini
+++ b/code/config.ini
@@ -1,6 +1,23 @@
 [DEFAULT]
-input_folder_asset = input/asset
-input_folder_grid  = input/grid
-output folder      = output/
-gpkg_file          = output/mesa.gpkg
-output_png         = output/map_visualization.png
+input_folder_asset     = input/asset
+input_folder_geocode   = input/geocode
+output_folder          = output/
+gpkg_file              = output/mesa.gpkg
+atlas_lon_size_km      = 100
+atlas_lat_size_km      = 100
+atlas_overlap_percent  = 10
+workingprojection_epsg = 4326
+output_png             = output/map_visualization.png
+
+# System for categories. This is based on asset values
+# and susceptibility values from 1 to 5.
+[A]
+range = 21-25
+[B]
+range = 16-20
+[C]
+range = 11-15
+[D]
+range = 6-10
+[E]
+range = 1-5
