--- a/code/config.ini
+++ b/code/config.ini
@@ -3,14 +3,16 @@ input_folder_asset     = input/asset
 input_folder_geocode   = input/geocode
 output_folder          = output/
 gpkg_file              = output/mesa.gpkg
-atlas_lon_size_km      = 100
-atlas_lat_size_km      = 100
+atlas_lon_size_km      = 150
+atlas_lat_size_km      = 150
 atlas_overlap_percent  = 10
 workingprojection_epsg = 4326
 output_png             = output/map_visualization.png
 
 # System for categories. This is based on asset values
-# and susceptibility values from 1 to 5.
+# and susceptibility values from 1 to 5. You may change
+# the value intervals to suit your own needs. You may
+#also extend or minimize the categories.
 [A]
 range = 21-25
 [B]
