Theme controlled from config.ini updated in files.

--- a/code/config.ini
+++ b/code/config.ini
@@ -3,6 +3,7 @@ input_folder_asset     = input/asset
 input_folder_geocode   = input/geocode
 output_folder          = output/
 gpkg_file              = output/mesa.gpkg
+ttk_bootstrap_theme    = superhero
 atlas_lon_size_km      = 150
 atlas_lat_size_km      = 150
 atlas_overlap_percent  = 10
