Default values for segments and documentation.

--- a/code/config.ini
+++ b/code/config.ini
@@ -1,12 +1,22 @@
 [DEFAULT]
 input_folder_asset     = input/asset
 input_folder_geocode   = input/geocode
+input_folder_lines     = input/lines
 output_folder          = output/
 gpkg_file              = output/mesa.gpkg
-ttk_bootstrap_theme    = litera
+ttk_bootstrap_theme    = superhero
+
+# The default atlas size can be adjusted here. The current
+# functionality for sizing the atlas frames is rutimentary.
+# So at this stage it is as good as it gets.
 atlas_lon_size_km      = 150
 atlas_lat_size_km      = 150
 atlas_overlap_percent  = 10
+
+# This is where the default size of segments are set. The values are 
+# stored in the lines, so they can be edited manyally later.
+segment_width          = 500
+segment_length         = 1000
 workingprojection_epsg = 4326
 output_png             = output/map_visualization.png
 
