--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 *.dbf
 *.bzl
 *.rc
-*.gpkg
 *.spec
 *.html
 *.shp
@@ -24,3 +23,6 @@ build/user_interface/PKG-00.toc
 .gitignore
 dist/user_interface/_internal/_bz2.pyd
 compile_candidate/mesa/src/main.rs
+code/input/asset/OSM/forest_landuse_osm.qmd
+mesa_4.0.0-alpha/qgis/mesa.qgz
+mesa_4.0.0-alpha.zip
