Folder for atlas file (polygons) in place.

--- a/code/config.ini
+++ b/code/config.ini
@@ -2,6 +2,7 @@
 input_folder_asset     = input/asset
 input_folder_geocode   = input/geocode
 input_folder_lines     = input/lines
+input_folder_atlas     = input/atlas
 output_folder          = output/
 gpkg_file              = output/mesa.gpkg
 ttk_bootstrap_theme    = superhero
