Document code The config file now has more structure and also has a list of themes available.

--- a/code/config.ini
+++ b/code/config.ini
@@ -3,12 +3,24 @@ input_folder_asset     = input/asset
 input_folder_geocode   = input/geocode
 input_folder_lines     = input/lines
 input_folder_atlas     = input/atlas
+input_folder_images    = input/images
+
 output_folder          = output/
+
 gpkg_file              = output/mesa.gpkg
+
+# The design is associated with a named theme. 
+#  Light themes:
+#   cosmo, flatly, journal, litera, lumen, minty, pulse, 
+#   sandstone, united, yeti, morph, simplex, cerculan
+#
+# Dark themes:
+# solar, superhero, darkly, cyborg, vapor
+#
 ttk_bootstrap_theme    = superhero
 
 # The default atlas size can be adjusted here. The current
-# functionality for sizing the atlas frames is rutimentary.
+# functionality for sizing the atlas frames is rudimentary.
 # So at this stage it is as good as it gets.
 atlas_lon_size_km      = 150
 atlas_lat_size_km      = 150
