UUID setting Positioned for settings of UUID in the settings file. Updates are made by user_interface.py.

--- a/code/config.ini
+++ b/code/config.ini
@@ -9,15 +9,19 @@ output_folder          = output/
 
 gpkg_file              = output/mesa.gpkg
 
-# The design is associated with a named theme. 
+# The design is associated with a named theme.
+# 
 #  Light themes:
 #   cosmo, flatly, journal, litera, lumen, minty, pulse, 
 #   sandstone, united, yeti, morph, simplex, cerculan
 #
-# Dark themes:
-# solar, superhero, darkly, cyborg, vapor
+#  Dark themes:
+#   solar, superhero, darkly, cyborg, vapor
 #
 ttk_bootstrap_theme    = superhero
+
+# ID settings
+id_uuid = 
 
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
