User info variables Variables added to support user dialogue on user information and uuid.

--- a/code/config.ini
+++ b/code/config.ini
@@ -22,6 +22,11 @@ ttk_bootstrap_theme    = superhero
 
 # ID settings
 id_uuid = 
+id_name = 
+id_email = 
+id_uuid_ok =
+id_personalinfo_ok =
+
 
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
@@ -51,3 +56,5 @@ range = 11-15
 range = 6-10
 [E]
 range = 1-5
+
+
