Logging preparations Preparing for logging using influxdatabase. Several variables in place for incrementation calls from different scripts.

--- a/code/config.ini
+++ b/code/config.ini
@@ -9,6 +9,8 @@ output_folder          = output/
 
 gpkg_file              = output/mesa.gpkg
 
+mesa_version           = MESA version 4.0.2-alpha
+
 # The design is associated with a named theme.
 # 
 #  Light themes:
@@ -21,18 +23,37 @@ gpkg_file              = output/mesa.gpkg
 ttk_bootstrap_theme    = superhero
 
 # ID settings
-id_uuid = 
+id_uuid = ecec88ae-42a2-410d-813a-3233f57407e5
 id_name = 
 id_email = 
-id_uuid_ok =
-id_personalinfo_ok =
+id_uuid_ok = False
+id_personalinfo_ok = False
 
+# Logging data
+log_date_initiated  = 
+log_date_lastupdate =
+
+log_org     = Python dev
+log_bucket  = mesa_4
+log_host    = https://us-east-1-1.aws.cloud2.influxdata.com
+
+# Statistics
+mesa_stat_startup = 12
+mesa_stat_process = 0
+mesa_stat_import_assets = 1
+mesa_stat_import_geocodes = 1
+mesa_stat_import_atlas = 1
+mesa_stat_setup = 0
+mesa_stat_edit_atlas = 0
+mesa_stat_create_atlas = 0
+mesa_stat_import_lines = 1
+mesa_stat_process_lines = 0
 
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
 # So at this stage it is as good as it gets.
-atlas_lon_size_km      = 150
-atlas_lat_size_km      = 150
+atlas_lon_size_km      = 200
+atlas_lat_size_km      = 200
 atlas_overlap_percent  = 10
 
 # This is where the default size of segments are set. The values are 
@@ -56,5 +77,3 @@ range = 11-15
 range = 6-10
 [E]
 range = 1-5
-
-
