Support for variables Relevant variables for a logging functionality as well as more suitable settings.

--- a/code/config.ini
+++ b/code/config.ini
@@ -23,30 +23,30 @@ mesa_version           = MESA version 4.0.2-alpha
 ttk_bootstrap_theme    = superhero
 
 # ID settings
-id_uuid = ecec88ae-42a2-410d-813a-3233f57407e5
+id_uuid = 
 id_name = 
 id_email = 
-id_uuid_ok = False
+id_uuid_ok = True
 id_personalinfo_ok = False
 
 # Logging data
-log_date_initiated  = 
-log_date_lastupdate =
+log_date_initiated = 
+log_date_lastupdate = 
 
-log_org     = Python dev
-log_bucket  = mesa_4
-log_host    = https://us-east-1-1.aws.cloud2.influxdata.com
+log_org     = 
+log_host    = 
+log_token   = 
 
 # Statistics
-mesa_stat_startup = 12
+mesa_stat_startup = 0
 mesa_stat_process = 0
-mesa_stat_import_assets = 1
-mesa_stat_import_geocodes = 1
-mesa_stat_import_atlas = 1
+mesa_stat_import_assets = 0
+mesa_stat_import_geocodes = 0
+mesa_stat_import_atlas = 0
 mesa_stat_setup = 0
 mesa_stat_edit_atlas = 0
 mesa_stat_create_atlas = 0
-mesa_stat_import_lines = 1
+mesa_stat_import_lines = 0
 mesa_stat_process_lines = 0
 
 # The default atlas size can be adjusted here. The current
