Documentaton and variables Variables related to logging added. Some more documentation added as well.

--- a/code/config.ini
+++ b/code/config.ini
@@ -1,3 +1,7 @@
+# Do not make changes to the configuration file. 
+# Changes could lead to the program not working
+# as expected.
+
 [DEFAULT]
 input_folder_asset     = input/asset
 input_folder_geocode   = input/geocode
@@ -22,42 +26,50 @@ mesa_version           = MESA version 4.0.2-alpha
 #
 ttk_bootstrap_theme    = superhero
 
-# ID settings
-id_uuid = 
+# Settings related to user and software installation.
+# The uuid is generated when you start the program and
+# is universally unique.
+id_uuid = 53b33d10-0196-4bc4-a61e-b2a4fe6e32c6
 id_name = 
 id_email = 
 id_uuid_ok = True
 id_personalinfo_ok = False
 
 # Logging data
-log_date_initiated = 
-log_date_lastupdate = 
+log_date_initiated = 2024-03-14 07:45:08
+log_date_lastupdate = 2024-01-14 12:51:43
 
-log_org     = 
-log_host    = 
-log_token   = 
+# Authentication information for the server where we
+# store usage data. The acces token is stored in the code
+# and is only added when we compile a version for
+# distribution.
+log_org     = know
+log_bucket  = tbl_402alpha
+log_host    = https://eu-central-1-1.aws.cloud2.influxdata.com
 
-# Statistics
-mesa_stat_startup = 0
-mesa_stat_process = 0
-mesa_stat_import_assets = 0
-mesa_stat_import_geocodes = 0
-mesa_stat_import_atlas = 0
-mesa_stat_setup = 0
-mesa_stat_edit_atlas = 0
-mesa_stat_create_atlas = 0
-mesa_stat_import_lines = 0
-mesa_stat_process_lines = 0
+
+# Statistics - the fields are automatically updated
+mesa_stat_startup = 36
+mesa_stat_process = 2
+mesa_stat_import_assets = 1
+mesa_stat_import_geocodes = 1
+mesa_stat_import_atlas = 2
+mesa_stat_import_lines = 2
+mesa_stat_setup = 2
+mesa_stat_edit_atlas = 1
+mesa_stat_create_atlas = 1
+mesa_stat_process_lines = 1
 
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
-# So at this stage it is as good as it gets.
+# So, at this stage it is as good as it gets.
 atlas_lon_size_km      = 200
 atlas_lat_size_km      = 200
 atlas_overlap_percent  = 10
 
-# This is where the default size of segments are set. The values are 
-# stored in the lines, so they can be edited manyally later.
+# This is where the default size of line segments are set. 
+# The values are stored in the lines attributes, and can be 
+# edited manually later.
 segment_width          = 1250
 segment_length         = 6000
 workingprojection_epsg = 4326
