--- a/code/config.ini
+++ b/code/config.ini
@@ -29,15 +29,15 @@ ttk_bootstrap_theme    = superhero
 # Settings related to user and software installation.
 # The uuid is generated when you start the program and
 # is universally unique.
-id_uuid = 53b33d10-0196-4bc4-a61e-b2a4fe6e32c6
+id_uuid = 
 id_name = 
 id_email = 
 id_uuid_ok = True
 id_personalinfo_ok = False
 
 # Logging data
-log_date_initiated = 2024-03-14 07:45:08
-log_date_lastupdate = 2024-01-14 12:51:43
+log_date_initiated = 
+log_date_lastupdate = 
 
 # Authentication information for the server where we
 # store usage data. The acces token is stored in the code
@@ -49,16 +49,16 @@ log_host    = https://eu-central-1-1.aws.cloud2.influxdata.com
 
 
 # Statistics - the fields are automatically updated
-mesa_stat_startup = 36
-mesa_stat_process = 2
-mesa_stat_import_assets = 1
-mesa_stat_import_geocodes = 1
-mesa_stat_import_atlas = 2
-mesa_stat_import_lines = 2
-mesa_stat_setup = 2
-mesa_stat_edit_atlas = 1
-mesa_stat_create_atlas = 1
-mesa_stat_process_lines = 1
+mesa_stat_startup = 0
+mesa_stat_process = 0
+mesa_stat_import_assets = 0
+mesa_stat_import_geocodes = 0
+mesa_stat_import_atlas = 0
+mesa_stat_import_lines = 0
+mesa_stat_setup = 0
+mesa_stat_edit_atlas = 0
+mesa_stat_create_atlas = 0
+mesa_stat_process_lines = 0
 
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
