Better use of buckets etc in influxDB now. Cleaned up variable names.

--- a/code/config.ini
+++ b/code/config.ini
@@ -33,7 +33,7 @@ id_uuid =
 id_name = 
 id_email = 
 id_uuid_ok = True
-id_personalinfo_ok = False
+id_personalinfo_ok = True
 
 # Logging data
 log_date_initiated = 
@@ -43,20 +43,21 @@ log_date_lastupdate =
 # store usage data. The acces token is stored in the code
 # and is only added when we compile a version for
 # distribution.
-log_org     = know
-log_bucket  = tbl_402alpha
-log_host    = https://eu-central-1-1.aws.cloud2.influxdata.com
+log_org           = know
+log_token         = 
+log_bucket        = log_bucket
+log_host          = https://eu-central-1-1.aws.cloud2.influxdata.com
 
 
 # Statistics - the fields are automatically updated
-mesa_stat_startup = 0
+mesa_stat_startup = 9
 mesa_stat_process = 0
-mesa_stat_import_assets = 0
-mesa_stat_import_geocodes = 0
+mesa_stat_import_assets = 1
+mesa_stat_import_geocodes = 1
 mesa_stat_import_atlas = 0
-mesa_stat_import_lines = 0
+mesa_stat_import_lines = 5
 mesa_stat_setup = 0
-mesa_stat_edit_atlas = 0
+mesa_stat_edit_atlas = 5
 mesa_stat_create_atlas = 0
 mesa_stat_process_lines = 0
 
