Added code and description for the associated ranges used later.

--- a/code/config.ini
+++ b/code/config.ini
@@ -50,14 +50,14 @@ log_host          = https://eu-central-1-1.aws.cloud2.influxdata.com
 
 
 # Statistics - the fields are automatically updated
-mesa_stat_startup = 9
+mesa_stat_startup = 0
 mesa_stat_process = 0
-mesa_stat_import_assets = 1
-mesa_stat_import_geocodes = 1
+mesa_stat_import_assets = 0
+mesa_stat_import_geocodes = 0
 mesa_stat_import_atlas = 0
-mesa_stat_import_lines = 5
+mesa_stat_import_lines = 0
 mesa_stat_setup = 0
-mesa_stat_edit_atlas = 5
+mesa_stat_edit_atlas = 0
 mesa_stat_create_atlas = 0
 mesa_stat_process_lines = 0
 
@@ -74,6 +74,7 @@ atlas_overlap_percent  = 10
 segment_width          = 1250
 segment_length         = 6000
 workingprojection_epsg = 4326
+output_projection_epsg = 4326
 output_png             = output/map_visualization.png
 
 # System for categories. This is based on asset values
@@ -81,12 +82,20 @@ output_png             = output/map_visualization.png
 # the value intervals to suit your own needs. You may
 #also extend or minimize the categories.
 [A]
-range = 21-25
+range       = 21-25
+description = Very high
 [B]
-range = 16-20
+range       = 16-20
+description = High
 [C]
-range = 11-15
+range       = 11-15
+description = Moderate
 [D]
-range = 6-10
+range       = 6-10
+description = Low
 [E]
-range = 1-5
+range       = 1-5
+description = Very low
+
+[VALID_VALUES]
+valid_input=1,2,3,4,5
