Functionality: Supports new features in application

--- a/code/config.ini
+++ b/code/config.ini
@@ -13,7 +13,7 @@ output_folder          = output/
 
 gpkg_file              = output/mesa.gpkg
 
-mesa_version           = MESA version 4.0.2-alpha
+mesa_version           = MESA version 4.0.3-alpha
 
 # The design is associated with a named theme.
 # 
@@ -33,7 +33,7 @@ id_uuid =
 id_name = 
 id_email = 
 id_uuid_ok = True
-id_personalinfo_ok = True
+id_personalinfo_ok = False
 
 # Logging data
 log_date_initiated = 
@@ -64,15 +64,20 @@ mesa_stat_process_lines = 0
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
 # So, at this stage it is as good as it gets.
-atlas_lon_size_km      = 200
-atlas_lat_size_km      = 200
+atlas_lon_size_km      = 100
+atlas_lat_size_km      = 100
 atlas_overlap_percent  = 10
 
 # This is where the default size of line segments are set. 
 # The values are stored in the lines attributes, and can be 
 # edited manually later.
-segment_width          = 1250
-segment_length         = 6000
+
+# Width across, not from center line
+segment_width          = 200
+
+# Length, simply
+segment_length         = 600
+
 workingprojection_epsg = 4326
 output_projection_epsg = 4326
 output_png             = output/map_visualization.png
