Code layout: Adjusted code USer interface: Updated GUI object names. Some of them had names not adjusted from being copies of other code initially.

--- a/code/config.ini
+++ b/code/config.ini
@@ -3,17 +3,18 @@
 # as expected.
 
 [DEFAULT]
-input_folder_asset     = input/asset
-input_folder_geocode   = input/geocode
-input_folder_lines     = input/lines
-input_folder_atlas     = input/atlas
-input_folder_images    = input/images
+input_folder_asset              = input/asset
+input_folder_geocode            = input/geocode
+input_folder_lines              = input/lines
+input_folder_atlas              = input/atlas
+input_folder_evaluate_landuse   = input/evaluate_landuse
+input_folder_images             = input/images
 
-output_folder          = output/
+output_folder                   = output/
 
-gpkg_file              = output/mesa.gpkg
+gpkg_file                       = output/mesa.gpkg
 
-mesa_version           = MESA version 4.0.3-alpha
+mesa_version                    = MESA version 4.0.5-beta
 
 # The design is associated with a named theme.
 # 
@@ -29,37 +30,37 @@ ttk_bootstrap_theme    = superhero
 # Settings related to user and software installation.
 # The uuid is generated when you start the program and
 # is universally unique.
-id_uuid = 
-id_name = 
-id_email = 
+id_uuid = f8704b4d-90b6-4174-a8dc-095217676d64
+id_name = Ragnvald Larsen
+id_email = ragnvald.larsen@miljodir.no
 id_uuid_ok = True
-id_personalinfo_ok = False
+id_personalinfo_ok = True
 
 # Logging data
-log_date_initiated = 
-log_date_lastupdate = 
+log_date_initiated = 2024-04-15 21:37:19
+log_date_lastupdate = 2024-04-19 13:08:46
 
 # Authentication information for the server where we
 # store usage data. The acces token is stored in the code
 # and is only added when we compile a version for
 # distribution.
 log_org           = know
-log_token         = 
+log_token         = Xp_sTOcg-46FFiQuplxz-Fqi-jEe5YGfOZarPR7gwZ4CMTMYseUPUjdKtp2xKV9w85TlBlh5X_lnaNzKULAhog==
 log_bucket        = log_bucket
 log_host          = https://eu-central-1-1.aws.cloud2.influxdata.com
 
 
 # Statistics - the fields are automatically updated
-mesa_stat_startup = 0
-mesa_stat_process = 0
-mesa_stat_import_assets = 0
-mesa_stat_import_geocodes = 0
-mesa_stat_import_atlas = 0
-mesa_stat_import_lines = 0
-mesa_stat_setup = 0
+mesa_stat_startup = 33
+mesa_stat_process = 2
+mesa_stat_import_assets = 4
+mesa_stat_import_geocodes = 3
+mesa_stat_import_atlas = 2
+mesa_stat_import_lines = 4
+mesa_stat_setup = 3
 mesa_stat_edit_atlas = 0
 mesa_stat_create_atlas = 0
-mesa_stat_process_lines = 0
+mesa_stat_process_lines = 4
 
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
@@ -73,10 +74,10 @@ atlas_overlap_percent  = 10
 # edited manually later.
 
 # Width across, not from center line
-segment_width          = 200
+segment_width          = 600
 
 # Length, simply
-segment_length         = 600
+segment_length         = 1000
 
 workingprojection_epsg = 4326
 output_projection_epsg = 4326
