--- a/code/system/config.ini
+++ b/code/system/config.ini
@@ -3,7 +3,7 @@
 # as expected.
 
 [DEFAULT]
-input_folder_asset              = input/asset
+input_folder_asset              = input\asset
 input_folder_geocode            = input/geocode
 input_folder_lines              = input/lines
 input_folder_atlas              = input/atlas
@@ -14,7 +14,7 @@ output_folder                   = output/
 
 gpkg_file                       = output/mesa.gpkg
 
-mesa_version                    = MESA version 4.1-beta
+mesa_version                    = MESA version 4.1.2-dev
 
 # The design is associated with a named theme.
 # 
