--- a/code/system/config.ini
+++ b/code/system/config.ini
@@ -14,7 +14,7 @@ output_folder                   = output/
 
 gpkg_file                       = output/mesa.gpkg
 
-mesa_version                    = MESA version 4.1.2-dev
+mesa_version                    = MESA version 4.1.2-beta
 
 # The design is associated with a named theme.
 # 
