Bugfix: Aligned the categories with the MESA method categories.

--- a/code/system/config.ini
+++ b/code/system/config.ini
@@ -1,9 +1,8 @@
-# Do not make changes to the configuration file. 
-# Changes could lead to the program not working
-# as expected.
+# In general - dDo not make changes to the configuration file.
+# Changes could lead to the program not working as expected.
 
 [DEFAULT]
-input_folder_asset              = input\asset
+input_folder_asset              = input/asset
 input_folder_geocode            = input/geocode
 input_folder_lines              = input/lines
 input_folder_atlas              = input/atlas
@@ -14,7 +13,7 @@ output_folder                   = output/
 
 gpkg_file                       = output/mesa.gpkg
 
-mesa_version                    = MESA version 4.1.2-beta
+mesa_version                    = MESA version 4.2_dev
 
 # The design is associated with a named theme.
 # 
@@ -87,23 +86,23 @@ output_png             = output/map_visualization.png
 # the value intervals to suit your own needs. You may
 #also extend or minimize the categories.
 [A]
-range           = 21-25
+range           = 20-25
 description     = Very high
 category_colour = #bd0026
 [B]
-range           = 16-20
+range           = 10-19
 description     = High
 category_colour = #f03b20
 [C]
-range           = 11-15
+range           = 5-9
 description     = Moderate
 category_colour = #fd8d3c
 [D]
-range           = 6-10
+range           = 2-4
 description     = Low
 category_colour = #fecc5c
 [E]
-range           = 1-5
+range           = 1-1
 description     = Very low
 category_colour = #ffffb2
 
