Bugfix: Default categories were wrong. Alright now.

--- a/code/system/config.ini
+++ b/code/system/config.ini
@@ -13,7 +13,7 @@ output_folder                   = output/
 
 gpkg_file                       = output/mesa.gpkg
 
-mesa_version                    = MESA version 4.2_dev
+mesa_version                    = MESA version 4.2.1
 
 # The design is associated with a named theme.
 # 
@@ -63,8 +63,8 @@ mesa_stat_process_lines = 0
 # The default atlas size can be adjusted here. The current
 # functionality for sizing the atlas frames is rudimentary.
 # So, at this stage it is as good as it gets.
-atlas_lon_size_km      = 100
-atlas_lat_size_km      = 100
+atlas_lon_size_km      = 50
+atlas_lat_size_km      = 50
 atlas_overlap_percent  = 10
 
 # This is where the default size of line segments are set. 
@@ -86,23 +86,23 @@ output_png             = output/map_visualization.png
 # the value intervals to suit your own needs. You may
 #also extend or minimize the categories.
 [A]
-range           = 20-25
+range           = 21-25
 description     = Very high
 category_colour = #bd0026
 [B]
-range           = 10-19
+range           = 16-20
 description     = High
 category_colour = #f03b20
 [C]
-range           = 5-9
+range           = 11-15
 description     = Moderate
 category_colour = #fd8d3c
 [D]
-range           = 2-4
+range           = 6-10
 description     = Low
 category_colour = #fecc5c
 [E]
-range           = 1-1
+range           = 1-5
 description     = Very low
 category_colour = #ffffb2
 
