Feature: Supporting settin gchunk_size for adjusting memory use when processing using DuckDB.

--- a/2024_uganda_temp/system/config.ini
+++ b/2024_uganda_temp/system/config.ini
@@ -1,4 +1,4 @@
-# In general - Do not make changes to the configuration file.
+# In general - dDo not make changes to the configuration file.
 # Changes could lead to the program not working as expected.
 
 [DEFAULT]
@@ -15,11 +15,6 @@ gpkg_file                       = output/mesa.gpkg
 
 mesa_version                    = MESA version 4.2.1
 
-# Adjust according to memory and processing power. The more memory
-# the higher number. Suggest keeping it at around 10.000 if your
-# computer has 16 GB memory. If it crashes - adjust downwards.
-chunk_size                      = 30000
-
 # The design is associated with a named theme.
 # 
 #  Light themes:
@@ -30,6 +25,14 @@ chunk_size                      = 30000
 #   solar, superhero, darkly, cyborg, vapor
 #
 ttk_bootstrap_theme    = superhero
+
+# Processing settings
+# Working with big data can lead to memory issues. We have therefore decided to establish
+# a chunk system where the data is split into parts with equal number of objects from 
+# assets and geocodes.
+
+chunk_size              = 500
+
 
 # Settings related to user and software installation.
 # The uuid is generated when you start the program and
@@ -42,7 +45,7 @@ id_personalinfo_ok = False
 
 # Logging data
 log_date_initiated = 2024-08-22 17:40:45
-log_date_lastupdate = 2024-08-26 18:06:50
+log_date_lastupdate = 2024-08-26 14:10:09
 
 # Authentication information for the server where we
 # store usage data. The acces token is stored in the code
@@ -52,9 +55,10 @@ log_org           = know
 log_bucket        = log_bucket
 log_host          = https://eu-central-1-1.aws.cloud2.influxdata.com
 
+
 # Statistics - the fields are automatically updated
-mesa_stat_startup = 28
-mesa_stat_process = 22
+mesa_stat_startup = 27
+mesa_stat_process = 17
 mesa_stat_import_assets = 12
 mesa_stat_import_geocodes = 12
 mesa_stat_import_atlas = 4
