Addede default values for report basemap mode in config.ini and removed "Save weights" button from parameter setup UI.

--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@ output_folder = output/
 
 gpkg_file = output/mesa.gpkg
 
-mesa_version                    = MESA version 5.0 beta 2025-12-09
+mesa_version                    = MESA version 5.0 beta 2025-12-15
 
 chunk_size                      = 20000
 cell_size                       = 9000
@@ -74,6 +74,12 @@ approx_gb_per_worker            = 5.0
 mem_target_frac                 = 0.95
 heartbeat_secs                  = 60
 
+# Basemap provider for report maps:
+# - xyz (default): Use MESA's built-in OSM XYZ downloader with persistent cache under output/tile_cache
+# - contextily: Use contextily (if installed); no tiles stored under output/tile_cache
+# - auto: Prefer contextily, fall back to xyz
+report_basemap_mode             = xyz
+
 atlas_lon_size_km               = 100
 atlas_lat_size_km               = 100
 atlas_overlap_percent           = 10
@@ -116,4 +122,4 @@ category_colour                 = #ffffb2
 valid_input                     = 1,2,3,4,5
 category_colour_unknown         = #BDBDBD
 index_importance_weights        = 1,2,5,5,10
-index_sensitivity_weights       = 1,2,3,5,10
+index_sensitivity_weights       = 10,10,10,10,10,10,10,10,10,10,10,10,10,10
