--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,19 @@
 *.rc
 *.spec
 *.xml
+*.qmd
+*.shp
+*.dbf
+*.prj
+*.shx
 *.pyc
 *.gpkg
+*.xlsx
+*.zip
 *.pkg
 *.parquet
+*.mbtiles
+__pycache__/
 build/user_interface/PKG-00.toc
 .gitignore
 dist/user_interface/_internal/_bz2.pyd
@@ -24,3 +33,5 @@ mesa_4.0.0-alpha.zip
 .vscode/
 .geoparquet/
 .mbtiles/
+./output/tile_cache/
+./output/reports
