--- a/config.ini
+++ b/config.ini
@@ -8,21 +8,18 @@ input_folder_lines              = input/lines
 input_folder_atlas              = input/atlas
 input_folder_evaluate_landuse   = input/evaluate_landuse
 input_folder_images             = input/images
-
-output_folder = output/
-
+output_folder                   = output/
 gpkg_file = output/mesa.gpkg
 
 mesa_version                    = MESA version 5.0 beta 2025-12-15
 
 chunk_size                      = 20000
 cell_size                       = 9000
-# method                        = ThreadPoolExecutor
+
+# method available methods is currently gpu only
 method                          = gpu
 max_workers                     = 0
-
 h3_max_cells                    = 20000000
-
 mosaic_force_serial             = auto
 
 # Themes: cosmo, flatly, journal, litera, lumen, minty, pulse,
@@ -43,17 +40,6 @@ log_date_lastupdate             = 2025-12-09 17:55:15
 log_org                         = know
 log_bucket                      = log_bucket
 log_host                        = https://eu-central-1-1.aws.cloud2.influxdata.com
-
-mesa_stat_startup               = 
-mesa_stat_process               = 
-mesa_stat_import_assets         = 
-mesa_stat_import_geocodes       = 
-mesa_stat_import_atlas          = 
-mesa_stat_import_lines          = 
-mesa_stat_setup                 = 
-mesa_stat_edit_atlas            = 
-mesa_stat_create_atlas          = 
-mesa_stat_process_lines         = 
 
 # Asset lines and points minimum buffer as we do not relate to arealess features.
 default_line_buffer_m           = 10
