REmoved unused data observations.

--- a/config.ini
+++ b/config.ini
@@ -26,20 +26,8 @@ mosaic_force_serial             = auto
 # sandstone, united, yeti, morph, simplex, cerculan, solar, superhero, darkly, cyborg, vapor
 ttk_bootstrap_theme             = litera
 
+# OpenAI-key used for intellingent processing
 openai_api_key_file             = secrets/openai.key
-
-id_uuid                         = ce0866ba-9942-4462-8ef0-dfddb42f7480
-id_name                         =
-id_email                        =
-id_uuid_ok                      =
-id_personalinfo_ok              =
-
-log_date_initiated              = 2025-12-09 17:55:15
-log_date_lastupdate             = 2025-12-09 17:55:15
-
-log_org                         = know
-log_bucket                      = log_bucket
-log_host                        = https://eu-central-1-1.aws.cloud2.influxdata.com
 
 # Asset lines and points minimum buffer as we do not relate to arealess features.
 default_line_buffer_m           = 10
@@ -50,7 +38,7 @@ default_point_buffer_m          = 10
 # also the larger the file size. Processing time and storage requirements will
 # increase with higher zoom levels.
 tiles_minzoom                   = 6
-tiles_maxzoom                   = 11
+tiles_maxzoom                   = 20
 
 # Performance knobs
 tiles_progress_every            = 1000
