Documented the performance knobs for better user support.

--- a/config.ini
+++ b/config.ini
@@ -41,11 +41,31 @@ tiles_minzoom                   = 6
 tiles_maxzoom                   = 20
 
 # Performance knobs
+# These settings influence speed, memory use, and how often the UI/log gets updates
+# during heavy processing (intersections, tiling, etc.).
+#
+# Notes:
+# - Smaller limits typically reduce peak memory, but can increase overhead and runtime.
+# - More frequent progress/heartbeat updates can make the UI feel more responsive, but
+#   may slow processing slightly.
+# - If you are unsure: keep defaults.
+#
+# Update progress/UI every N tiles (smaller = more updates, slightly slower)
 tiles_progress_every            = 1000
+
+# If a chunk contains more than this many geocodes, processing will split work to keep memory stable
 geocode_soft_limit              = 400
+
+# If a chunk contains more than this many assets, processing will split work to keep memory stable
 asset_soft_limit                = 50000
+
+# Estimated RAM use per worker (GB). Higher value => fewer workers chosen when max_workers=0
 approx_gb_per_worker            = 5.0
+
+# Fraction of available RAM to treat as usable budget when auto-sizing work (0.0-1.0)
 mem_target_frac                 = 0.95
+
+# Seconds between “still working” pings in long-running operations (smaller = more frequent logs)
 heartbeat_secs                  = 60
 
 # Basemap provider for report maps:
