Further documentation and cleaning up of variables in config.

--- a/config.ini
+++ b/config.ini
@@ -52,19 +52,14 @@ tiles_maxzoom                   = 20
 #
 # Update progress/UI every N tiles (smaller = more updates, slightly slower)
 tiles_progress_every            = 1000
-
 # If a chunk contains more than this many geocodes, processing will split work to keep memory stable
 geocode_soft_limit              = 400
-
 # If a chunk contains more than this many assets, processing will split work to keep memory stable
 asset_soft_limit                = 50000
-
 # Estimated RAM use per worker (GB). Higher value => fewer workers chosen when max_workers=0
 approx_gb_per_worker            = 5.0
-
 # Fraction of available RAM to treat as usable budget when auto-sizing work (0.0-1.0)
 mem_target_frac                 = 0.95
-
 # Seconds between “still working” pings in long-running operations (smaller = more frequent logs)
 heartbeat_secs                  = 60
 
@@ -81,11 +76,13 @@ atlas_overlap_percent           = 10
 segment_width                   = 600
 segment_length                  = 1000
 
+# Projection used to calculate areas and distances.
 area_projection_epsg            = 3035
-workingprojection_epsg          = 4326
+# Projection used for working calculations (e.g., buffering, intersections)
+working_projection_epsg          = 4326
+# Projection used for output data
 output_projection_epsg          = 4326
 
-output_png                      = output/map_visualization.png
 
 [A]
 range                           = 21-25
