MOred default settings collected in config.ini

--- a/config.ini
+++ b/config.ini
@@ -69,10 +69,19 @@ heartbeat_secs                  = 60
 # - auto: Prefer contextily, fall back to xyz
 report_basemap_mode             = xyz
 
+# Inset styling for report maps (context insets, overview insets)
+report_inset_border_color       = #1f1f1f
+report_inset_border_lw          = 1.2
+report_inset_shadow_alpha       = 0.18
+report_inset_shadow_dx          = 0.006
+report_inset_shadow_dy          = 0.008
+
+# Default sizes for atlases
 atlas_lon_size_km               = 100
 atlas_lat_size_km               = 100
 atlas_overlap_percent           = 10
 
+# Default segment sizes for line segmentation
 segment_width                   = 600
 segment_length                  = 1000
 
