Only cersion reference. Updated date.

--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ input_folder_images             = input/images
 output_folder                   = output/
 gpkg_file = output/mesa.gpkg
 
-mesa_version                    = MESA version 5.0 beta 2025-12-15
+mesa_version                    = 5.0 beta 2025-12-26
 
 chunk_size                      = 20000
 cell_size                       = 9000
