Documenting settings to balance memory use.

--- a/config.ini
+++ b/config.ini
@@ -42,7 +42,9 @@ tiles_maxzoom                   = 12
 
 # Performance knobs
 # These settings influence speed, memory use, and how often the UI/log gets updates
-# during heavy processing (intersections, tiling, etc.).
+# during heavy processing (intersections, tiling, etc.). Typical errors which indicate
+# memory issues (e.g., "bad allocation" or similar) can often be resolved by lowering
+# the geocode_soft_limit and asset_soft_limit values.
 #
 # Notes:
 # - Smaller limits typically reduce peak memory, but can increase overhead and runtime.
