Better structure to the config.ini-file. More doumentation on what the knobs represent.

--- a/config.ini
+++ b/config.ini
@@ -12,16 +12,6 @@ output_folder                   = output/
 gpkg_file = output/mesa.gpkg
 
 mesa_version                    = 5.0 beta 2025-12-26
-
-chunk_size                      = 20000
-cell_size                       = 9000
-
-# method available methods is currently gpu only
-method                          = gpu
-max_workers                     = 0
-h3_max_cells                    = 20000000
-mosaic_force_serial             = auto
-
 # Themes: cosmo, flatly, journal, litera, lumen, minty, pulse,
 # sandstone, united, yeti, morph, simplex, cerculan, solar, superhero, darkly, cyborg, vapor
 ttk_bootstrap_theme             = litera
@@ -52,6 +42,15 @@ tiles_maxzoom                   = 12
 #   may slow processing slightly.
 # - If you are unsure: keep defaults.
 #
+# Processing backend. Currently only GPU processing is supported; this setting is kept for compatibility/future expansion.
+method                          = gpu
+# Worker processes for CPU-side parallel work: 0=auto. Final worker count is still capped by RAM budget (see approx_gb_per_worker/mem_target_frac) and CPU count.
+max_workers                     = 0
+# Cap for H3 generation: if estimated H3 cells for the AOI exceed this, H3 levels are skipped to avoid extreme time/RAM use.
+h3_max_cells                    = 20000000
+# Force mosaic generation to run serial (set true/1) to reduce peak RAM; otherwise use auto worker selection.
+mosaic_force_serial             = auto
+
 # Update progress/UI every N tiles (smaller = more updates, slightly slower)
 tiles_progress_every            = 1000
 # If a chunk contains more than this many geocodes, processing will split work to keep memory stable
@@ -64,6 +63,10 @@ approx_gb_per_worker            = 5.0
 mem_target_frac                 = 0.95
 # Seconds between “still working” pings in long-running operations (smaller = more frequent logs)
 heartbeat_secs                  = 60
+# Base processing chunk size (feature count). Smaller reduces peak memory but increases overhead/runtime.
+chunk_size                      = 20000
+# Spatial grid cell size used when partitioning work. Smaller can reduce peak memory (more partitions) but may run slower.
+cell_size                       = 9000
 
 # Basemap provider for report maps:
 # - xyz (default): Use MESA's built-in OSM XYZ downloader with persistent cache under output/tile_cache
