Added performance knobs for creation of basic mosaics.

--- a/config.ini
+++ b/config.ini
@@ -42,14 +42,85 @@ tiles_maxzoom                   = 12
 #   may slow processing slightly.
 # - If you are unsure: keep defaults.
 #
-# Processing backend. Currently only GPU processing is supported; this setting is kept for compatibility/future expansion.
-method                          = gpu
+#
 # Worker processes for CPU-side parallel work: 0=auto. Final worker count is still capped by RAM budget (see approx_gb_per_worker/mem_target_frac) and CPU count.
 max_workers                     = 0
 # Cap for H3 generation: if estimated H3 cells for the AOI exceed this, H3 levels are skipped to avoid extreme time/RAM use.
 h3_max_cells                    = 20000000
-# Force mosaic generation to run serial (set true/1) to reduce peak RAM; otherwise use auto worker selection.
-mosaic_force_serial             = auto
+
+# -------------------------------------------------------------------------
+# Basic mosaic (basic_mosaic) performance knobs
+# These only affect the “Create geocodes (H3 / Mosaic)” mosaic build.
+#
+# Key idea:
+# - The slow phase is "Parallel boundary extraction". If CPU looks low near the
+#   end, it is often because only a few heavy chunks remain ("straggler tail").
+#   Use task ordering + smaller chunk sizes to keep workers busy.
+
+# Force mosaic generation to run single-process.
+# - false: use multiprocessing when mosaic_workers > 1 (default)
+# - true: force workers=1 (lower peak RAM; slower)
+mosaic_force_serial             = false
+
+# Number of worker processes for mosaic boundary extraction.
+# - 0: auto-size based on CPU and available RAM (default)
+# - N>0: fixed number of worker processes
+mosaic_workers                  = 0
+
+# Auto worker sizing (only used when mosaic_workers = 0)
+# - fraction: fraction of detected CPUs to consider
+mosaic_auto_worker_fraction     = 0.75
+# - min: minimum workers when auto-sizing
+mosaic_auto_worker_min          = 1
+# - max: 0 means no explicit upper bound (still capped by RAM); otherwise cap workers
+mosaic_auto_worker_max          = 0
+# - mem_gb: approximate GB per worker used for RAM-based capping
+mosaic_auto_worker_mem_gb       = 1.5
+
+# Enable multiprocessing for boundary extraction.
+# - true: use multiprocessing pool (default)
+# - false: always run extraction serially (easier debugging; slower)
+mosaic_parallel_extract         = true
+
+# Chunk size for parallel boundary extraction.
+# - Larger: less overhead, but worse load balancing (can create a slow tail)
+# - Smaller: better load balancing, but more overhead
+mosaic_extract_chunk_size       = 2500
+
+# Task ordering for parallel chunks (reduces end-of-run stalls).
+# - interleave: mix light/heavy chunks for steadier progress (default)
+# - heavy_first: run heaviest chunks first
+# - light_first: run lightest chunks first
+mosaic_task_order               = interleave
+
+# Pool dispatch chunk size for imap_unordered (NOT the same as mosaic_extract_chunk_size).
+# - 1: most responsive/steady (default)
+# - >1: lower overhead but can worsen load balance
+mosaic_extract_pool_chunksize   = 1
+
+# Restart each worker after N tasks (limits memory growth; too small adds overhead).
+# - 0/empty is not allowed; use >= 1
+# - Typical: 10–50 on Windows for large projects
+mosaic_extract_maxtasksperchild = 4
+
+# Advanced (leave defaults unless tuning)
+# Batch sizes for union reduction stages.
+mosaic_line_union_batch         = 4000
+mosaic_line_union_max_partials  = 16
+mosaic_coverage_union_batch     = 500
+
+# Flush polygonize output to disk every N faces (reduces peak RAM).
+mosaic_faces_flush_batch        = 250000
+
+# Compatibility note:
+# Older configs used mosaic_pool_maxtasksperchild / mosaic_pool_chunksize.
+# Newer builds prefer mosaic_extract_maxtasksperchild / mosaic_extract_pool_chunksize.
+# Both are accepted; keep only one set to avoid confusion.
+
+# -------------------------------------------------------------------------
+# Processing (data_process) performance knobs
+# These settings affect the main processing pipeline (intersections, chunking,
+# flattening, and related heavy steps run by tools\data_process.exe).
 
 # Update progress/UI every N tiles (smaller = more updates, slightly slower)
 tiles_progress_every            = 1000
